<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:textSize="18sp"
        android:textColor="#E6D5A3"
        android:textStyle="bold"
        android:paddingBottom="20dp"
        android:gravity="center"
        android:fontFamily="@font/cinzel"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_change_api_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/api_key_change"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@drawable/cp_btn_medieval_key"
        android:textColor="#fff"
        android:layout_marginBottom="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@drawable/cp_btn_medieval_red"
        android:textColor="#fff"/>

</LinearLayout>
