<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_medieval"
    tools:context=".screens.setting.LoginActivity">

    <ImageView
        android:id="@+id/top_frame"
        android:contentDescription="@string/frame_topo"
        android:layout_width="330dp"
        android:layout_height="120dp"
        android:src="@drawable/bg_frame_topo"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_frame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textColor="#2B1F17"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintTop_toTopOf="@id/top_frame"
        app:layout_constraintBottom_toBottomOf="@id/top_frame"
        app:layout_constraintStart_toStartOf="@id/top_frame"
        app:layout_constraintEnd_toEndOf="@id/top_frame" />

    <ImageView
        android:id="@+id/bottom_frame"
        android:contentDescription="@string/frame_base"
        android:layout_width="330dp"
        android:layout_height="500dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/bg_frame_base"
        app:layout_constraintTop_toBottomOf="@id/top_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/content_container"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        app:layout_constraintTop_toTopOf="@id/bottom_frame"
        app:layout_constraintBottom_toBottomOf="@id/bottom_frame"
        app:layout_constraintStart_toStartOf="@id/bottom_frame"
        app:layout_constraintEnd_toEndOf="@id/bottom_frame">

        <EditText
            android:id="@+id/input_username_login"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:hint="@string/login_name_user"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/cp_edittext_medieval"
            android:textColor="#FFFFFF"
            android:textColorHint="#D4C8B0"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:layout_marginBottom="12dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/input_password_login"
            android:layout_width="280dp"
            android:layout_height="48dp"
            android:hint="@string/login_password"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:background="@drawable/cp_edittext_medieval"
            android:textColor="#FFFFFF"
            android:textColorHint="#D4C8B0"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:layout_marginBottom="20dp"
            tools:ignore="TextFields" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_action"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login_btn_enter"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/cp_btn_medieval_login"
            android:textColor="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:elevation="4dp" />

        <TextView
            android:id="@+id/btn_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textColor="@color/link_color"
            android:textStyle="bold"
            android:padding="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <include
        layout="@layout/cp_top_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>